# line_resume_fastapi

./: .dockerignore  .gitignore  Dockerfile  READEME.md  main.py  pyproject.toml
app/: main.py
app/data/: clinic_loader.py
app/handlers/: landinfo_chat.py
app/line/: client.py  richmenu.py
app/line/flex_builder/: clinic_item.py  clinic_list.py  counseling.py  landinfo_demo.py  landinfo_entry_flexmsg.py  main_menu.py  portfolio.py  resume.py  resume_image.py
app/line/messages/: home_entry.py
app/line/quickbtn/: counseling_quickreply.py  landinfo_quickreply.py  main_quickreply.py
app/routers/: landinfo.py  webhook.py
app/utils/: classify.py  fuzzy.py  geo.py  redis_client.py
data/: clinic.json
deploy/raspi/: .env.example  README.md  docker-compose.yml  ngrok.yml  ngrok_notifier.py
scripts/: deploy_richmenu.py  richmenu_home_spec.py
services/landinfo_api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  test_version.cjs
services/landinfo_api/services/: browser-singleton.js  index.js  queue.js  server.js  worker.js
services/landinfo_api/services/data/: crawl-sections.js
services/landinfo_api/services/helpers/: enqueue-test.js  ping-redis.js  test-resolve.js
services/landinfo_api/services/helpers/normalizeSections/: resolve-old.js
services/landinfo_api/services/helpers/session/: login-none.js  (+3 more)
services/landinfo_api/services/legacy/: index copy 2.js  index copy 3.js  index copy.js  index_new.js  landinfo.js
services/landinfo_api/services/utils/: cityCode.json  districtCode.json  sectionCode.json
(+17 files in other folders)
